[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Main/playbutton.png" type="Texture" id=1]
[ext_resource path="res://UI/Main/options.png" type="Texture" id=2]
[ext_resource path="res://UI/Main/shopbutton.png" type="Texture" id=3]
[ext_resource path="res://UI/Main/freecoin.png" type="Texture" id=4]
[ext_resource path="res://UI/Main/menulogo.png" type="Texture" id=5]
[ext_resource path="res://Scenes/BG.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/LevelItem/coin.png" type="Texture" id=7]
[ext_resource path="res://Asset/Montserrat-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Asset/Montserrat-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 36
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Asset/Montserrat-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" parent="." instance=ExtResource( 6 )]

[node name="FreeBox" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="FreeBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 36
custom_constants/margin_left = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreeBox2" type="VBoxContainer" parent="FreeBox/MarginContainer"]
margin_left = 36.0
margin_top = 36.0
margin_right = 236.0
margin_bottom = 204.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreeButton" type="TextureButton" parent="FreeBox/MarginContainer/FreeBox2"]
margin_left = 42.0
margin_right = 157.0
margin_bottom = 115.0
size_flags_horizontal = 6
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreeLabel" type="Label" parent="FreeBox/MarginContainer/FreeBox2"]
margin_top = 123.0
margin_right = 200.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
text = "Free Coins"
align = 1
valign = 1

[node name="CoinsBox" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CoinsBox"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -247.0
margin_bottom = 124.0
custom_constants/margin_right = 36
custom_constants/margin_top = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsBox2" type="HBoxContainer" parent="CoinsBox/MarginContainer"]
margin_top = 64.0
margin_right = 211.0
margin_bottom = 124.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="CoinsBox/MarginContainer/CoinsBox2"]
margin_left = 16.0
margin_right = 151.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 4 )
text = "+1236"
align = 1
valign = 1

[node name="CoinsTexture" type="TextureRect" parent="CoinsBox/MarginContainer/CoinsBox2"]
margin_left = 167.0
margin_right = 195.0
margin_bottom = 60.0
texture = ExtResource( 7 )
stretch_mode = 3

[node name="OptionsBox" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="OptionsBox"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -270.0
margin_right = 156.0
custom_constants/margin_left = 48
custom_constants/margin_bottom = 128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBox2" type="VBoxContainer" parent="OptionsBox/MarginContainer"]
margin_left = 48.0
margin_right = 156.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="OptionsBox/MarginContainer/OptionBox2"]
margin_right = 108.0
margin_bottom = 107.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionLabel" type="Label" parent="OptionsBox/MarginContainer/OptionBox2"]
margin_top = 111.0
margin_right = 108.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 5 )
text = "Options"
align = 1
valign = 1

[node name="QuestBox" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="QuestBox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -270.0
custom_constants/margin_right = 48
custom_constants/margin_bottom = 128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBox2" type="VBoxContainer" parent="QuestBox/MarginContainer"]
margin_right = 108.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="QuestBox/MarginContainer/OptionBox2"]
margin_right = 108.0
margin_bottom = 107.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionLabel" type="Label" parent="QuestBox/MarginContainer/OptionBox2"]
margin_top = 111.0
margin_right = 108.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 5 )
text = "Quest"
align = 1
valign = 1

[node name="Logo" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Logo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -498.5
margin_top = -420.0
margin_right = 498.5
custom_constants/margin_top = -128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoTexture" type="TextureRect" parent="Logo/MarginContainer"]
margin_top = -128.0
margin_right = 997.0
margin_bottom = 420.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_right = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -424.0
margin_right = 424.0
margin_bottom = 417.0
custom_constants/margin_top = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/MarginContainer"]
margin_top = 96.0
margin_right = 848.0
margin_bottom = 513.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Buttons/MarginContainer/VBoxContainer"]
margin_right = 848.0
margin_bottom = 197.0
texture_normal = ExtResource( 1 )

[node name="ShopButton" type="TextureButton" parent="Buttons/MarginContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 848.0
margin_bottom = 417.0
texture_normal = ExtResource( 3 )
[connection signal="pressed" from="FreeBox/MarginContainer/FreeBox2/FreeButton" to="." method="_on_FreeButton_pressed"]
[connection signal="pressed" from="OptionsBox/MarginContainer/OptionBox2/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="QuestBox/MarginContainer/OptionBox2/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
